--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,29 +32,30 @@ scikit-image = ">=0.22.0, <1.0.0"
 plotly = "^5.16.1"
 pandas = "^2.1.0"
 typer = ">=0.15.0, <1.0.0"
+SimpleITK = "^2.2.2"
+nibabel = "^5.1.0"
+pynrrd = "^1.1.3"
+joblib = "^1.3.2"
+tqdm = ">=4.62.3"
+auxiliary = ">=0.1.0"
+pytest = ">=8.1.1"
 
-# Optional GPU dependencies - use precompiled wheels
+# Optional dependencies
+torch = {version = "^2.1.0", optional = true}
 cupy-cuda11x = {version = "^13.0.0", optional = true}
 cupy-cuda12x = {version = "^13.0.0", optional = true}
 
 [tool.poetry.extras]
+torch = ["torch"]
 gpu-cuda11 = ["cupy-cuda11x"]
 gpu-cuda12 = ["cupy-cuda12x"]
 gpu = ["cupy-cuda11x"]  # Default to CUDA 11.x
 
 [tool.poetry.group.dev.dependencies]
-pytest = ">=8.1.1"
 coverage = ">=7.0.1"
 pytest-mock = "^3.6.0"
-joblib = "^1.3.2"
 future = ">=0.18.3, <1.0.0"
 flake8 = ">=4.0.1"
-auxiliary = ">=0.1.0"
-tqdm = ">=4.62.3"
-SimpleITK = "^2.2.2"
-torch = "^2.1.0"
-nibabel = "^5.1.0"
-pynrrd = "^1.1.3"
 
 [tool.poetry.group.docs]
 optional = true
