--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Configure poetry
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry
+          python -m pip install poetry --extras test
       - name: Install dependencies
         run: |
           python -m poetry install
